; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_inode.c_xfs_iunlink_lookup_backref.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_inode.c_xfs_iunlink_lookup_backref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_perag = type { i32 }
%struct.xfs_iunlink = type { i32 }

@xfs_iunlink_hash_params = common dso_local global i32 0, align 4
@NULLAGINO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xfs_perag*, i32)* @xfs_iunlink_lookup_backref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfs_iunlink_lookup_backref(%struct.xfs_perag* %0, i32 %1) #0 {
  %3 = alloca %struct.xfs_perag*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.xfs_iunlink*, align 8
  store %struct.xfs_perag* %0, %struct.xfs_perag** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.xfs_perag*, %struct.xfs_perag** %3, align 8
  %7 = getelementptr inbounds %struct.xfs_perag, %struct.xfs_perag* %6, i32 0, i32 0
  %8 = load i32, i32* @xfs_iunlink_hash_params, align 4
  %9 = call %struct.xfs_iunlink* @rhashtable_lookup_fast(i32* %7, i32* %4, i32 %8)
  store %struct.xfs_iunlink* %9, %struct.xfs_iunlink** %5, align 8
  %10 = load %struct.xfs_iunlink*, %struct.xfs_iunlink** %5, align 8
  %11 = icmp ne %struct.xfs_iunlink* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.xfs_iunlink*, %struct.xfs_iunlink** %5, align 8
  %14 = getelementptr inbounds %struct.xfs_iunlink, %struct.xfs_iunlink* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @NULLAGINO, align 4
  br label %18

18:                                               ; preds = %16, %12
  %19 = phi i32 [ %15, %12 ], [ %17, %16 ]
  ret i32 %19
}

declare dso_local %struct.xfs_iunlink* @rhashtable_lookup_fast(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
